# iou

./: .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
iou-sys/: Cargo.toml  build.rs  iouc.c
iou-sys/src/: lib.rs
props/: text.txt
src/: completion_queue.rs  cqe.rs  lib.rs  probe.rs  registrar.rs  sqe.rs  submission_queue.rs
src/registrar/: mod.rs  registered.rs
tests/: accept.rs  connect.rs  cqe_iterator.rs  cqes-iter.rs  exhaust-queue.rs  fileset-placeholder.rs  fixed-file-write.rs  noop.rs  poll.rs  probe.rs  read.rs  register-buffers.rs  socket.rs  timeout.rs  write.rs
