[package]
name = "iou"
version = "0.3.0"
description = "io_uring bindings"
documentation = "https://docs.rs/iou"
repository = "https://github.com/withoutboats/iou"
keywords = ["io_uring", "liburing", "async", "futures"]
license = "MIT OR Apache-2.0"
authors = ["Without Boats <boats@mozilla.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.0"
nix = "0.16.0"
uring-sys = "0.7.1"
uring-sys = "0.7.2"
libc = "0.2.77"

[dev-dependencies]
semver = "0.9.0"
